--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
 <h1> Hello Simple Git Prj</h1>
 <h2>Use git/github with VS Code</h2>
+<h3>Use git/github with VS Code</h3>
 </body>
 </html>
