colon after DOCTYPE is removed

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE:html>
+<!DOCTYPE html>
 <html Lang="eng">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1> Hello Simple Git Prj</h1>
-<h2>Use git/github with VS Code</h2>
+<h2>Use git/github with VS Code</h2>git 
 </body>
 </html>
