a third h3 tag was added

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE git html>
 <html Lang="eng">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1> Hello Simple Git Prj</h1>
-<h2>Use git/github with VS Code</h2>git 
+<h2>Use git/github with VS Code</h2>
+<h3>Use git/github with VS Code</h3> 
 </body>
 </html>
